refactor(auth): 重构用户语言设置和配置文件获取逻辑
- 修改ApplicationService中访问令牌语言设置方式，使用userService获取用户语言
- 移除ApplicationAccessTokenEntity默认创建中的硬编码语言值，改为null
- 将用户配置文件获取端点从AuthController移至UserController
- 在UserServiceImpl中移除登录模型中的语言设置相关代码
- 移除用户创建时的语言设置逻辑
- 移除更新语言时的令牌重建机制
- 使用getFirst()替换list().get(0)的安全性改进
- 添加getLanguage方法到IUserService接口并实现